# pylint

./: .codecov.yml  .copyrite_aliases  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .hgtags  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyenchant_pylint_custom_dict.txt  .readthedocs.yaml  .travis.yml  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  ChangeLog  DEPENDS  Dockerfile  MANIFEST.in  Makefile  README  README.Python3  README.rst  TODO  __init__.py  __pkginfo__.py  announce.txt  appveyor.yml  apycot.ini  classes.dot  codecov.yml  config.py  custom_dict.txt  epylint.py  gui.py  interfaces.py  (+20 more)
.eggs/: pytest_runner-2.11.1-py2.7.egg
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  main.workflow  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_Bug_report.md  2_Feature_request.md  3_Question.md  BUG-REPORT.yml  FEATURE-REQUEST.yml  QUESTION.yml  config.yml
.github/workflows/: backport.yml  benchmark.yaml  benchmark_comment.yaml  changelog.yml  checks.yaml  ci.yaml  codeql-analysis.yml  label_skip_news.yaml  primer-test.yaml  primer_comment.yaml  primer_run_main.yaml  primer_run_pr.yaml  pyreverse_primer_comment.yaml  pyreverse_primer_run_main.yaml  pyreverse_primer_run_pr.yaml  release.yml  stale.yml  tests.yaml  tests_three.yaml  tests_two.yaml
.history/: CONTRIBUTORS_20210811140825.txt  ChangeLog_20210811140825
appveyor/: install.ps1
checkers/: __init__.py  base.py  classes.py  design_analysis.py  exceptions.py  format.py  imports.py  logging.py  misc.py  newstyle.py  python3.py  raw_metrics.py  rpython.py  similar.py  spelling.py  stdlib.py  string_format.py  strings.py  typecheck.py  utils.py  variables.py
completion/: .gitignore  Makefile  pylint.yaml  update_yaml.py
completion/bash/: pylint
completion/fish/: pylint.fish
completion/zsh/: _pylint
debian/: NEWS.Debian  README.source  changelog  control  copyright  pylint.dirs  pylint.docs  pylint.emacsen-install  pylint.emacsen-remove  pylint.emacsen-startup  pylint.examples  pylint.manpages  pylint.postinst  pylint.postrm  pylint.prerm  rules  watch
debian.lenny/: rules
debian.py3k/: control  rules
debian.sid/: control  rules
doc/: FAQ.rst  FAQ.txt  Makefile  backlinks.rst  beginner_pylint_tutorial.txt  changelog.rst  check_rst_files.py  conf.py  contact.rst  contribute.rst  custom_checkers.rst  development_guide.rst  extend.rst  extensions.rst  faq.rst  features.rst  features.txt  flymake.rst  flymake.txt  generated_features.rst  ide-integration.rst  index.rst  installation.rst  intro.rst  make.bat  makefile  manual.rst  manual.txt  message-control.rst  options.rst  output.rst  plugins.rst  pyreverse.rst  quickstart.rst  quickstart.txt  readthedoc_requirements.txt  release.md  release.txt  requirements.txt  rpython.txt  (+8 more)
doc/additional_commands/: index.rst
doc/additional_tools/: index.rst
doc/contact/: contact.rst  index.rst
doc/data/: .flake8  ruff.toml
doc/development_guide/: contribute.rst  index.rst  (+5 more)
elisp/: pylint-flymake.el  pylint.el  startup
examples/: Dockerfile  custom.py  custom_raw.py  deprecation_checker.py  pylintrc  pylintrc_alwaysfail  pylintrc_camelcase  pyproject.toml
extensions/: check_docs.py
github_actions/: Dockerfile  README.md  entrypoint.sh
man/: epylint.1  pylint-gui.1  pylint.1  pyreverse.1  symilar.1
pylint/: __init__.py  __main__.py  __pkginfo__.py  config.py  constants.py  epylint.py  exceptions.py  graph.py  gui.py  interfaces.py  lint.py  message_sets.py  pylintd.py  stage.py  testutils.py  typing.py  utils.py
pyreverse/: diadefslib.py  diagrams.py  main.py  utils.py  writer.py
reporters/: __init__.py  guireporter.py  html.py  json.py  text.py
script/: .contributors_aliases.json  bump_changelog.py  check_changelog.py  check_message_references.py  check_newsfragments.py  copyright.txt  create_contributor_list.py  fetch_astroid_hash.py  fix_documentation.py  get_unused_message_id_category.py  update_primer_commits.py
test/: fulltest.sh  func_test.py  func_test_rpython.py  func_test_sample_config.py  genbuiltins.py  regrtest.py  runtests.py  smoketest.py  test_base.py  test_check_docs.py  test_encoding.py  test_format.py  test_func.py  test_func_rpython.py  test_func_sample_config.py  test_functional.py  test_import_graph.py  test_logging.py  test_misc.py  test_regr.py  test_rpycompilation.py  test_self.py  test_similar.py  test_type.py  test_utils.py  unittest_checker_base.py  unittest_checker_classes.py  unittest_checker_format.py  unittest_checker_logging.py  unittest_checker_misc.py  unittest_checker_python3.py  unittest_checker_similar.py  unittest_checker_spelling.py  unittest_checker_typecheck.py  unittest_checker_variables.py  unittest_checkers_utils.py  unittest_lint.py  unittest_pyreverse_diadefs.py  unittest_pyreverse_writer.py  unittest_reporters_json.py  (+3 more)
tests/: .test_pylintrc  bla_test.py  conftest.py  test_apt_pkg_not_iterable_7122.py  test_argparse_subclass_4667.py  test_azure_namespace_8980.py  test_bla.py  test_bson_with_options_9137.py  test_check_parallel.py  test_config.py  test_conftest.py  test_context_manager_no_member_4917.py  test_deprecation.py  test_epylint.py  test_func.py  test_functional.py  test_functional_directories.py  test_import_graph.py  test_import_module_shadowing.py  test_namedtuple_multiassign_7268.py  test_numversion.py  test_pragma_parser.py  test_precedence.py  test_pydantic_field_4899.py  test_pygobject_window_6352.py  test_pylint_runners.py  test_regr.py  test_self.py  test_similar.py  test_uninferable_kwargs_9983.py  unittest_checker_base.py  unittest_checker_classes.py  unittest_checker_exceptions.py  unittest_checker_format.py  unittest_checker_imports.py  unittest_checker_logging.py  unittest_checker_python3.py  unittest_checker_similar.py  unittest_checker_spelling.py  unittest_checker_stdlib.py  (+12 more)
tests/config/functional/setup_cfg/do_not_read_other_tools_configuration/: setup.2.out  setup.4.out  setup.cfg  setup.result.json
(+7426 files in other folders)
