# Setuptools v62.6 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
# wheel doesn't yet read license_files from pyproject.toml - tools.setuptools
# Keep it here until it does!
license_files =
    LICENSE
    CONTRIBUTORS.txt

[flake8]
# Incompatible with black see https://github.com/ambv/black/issues/315
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
# B028: consider using the `!r` conversion flag
ignore =
    E203,
    W503,
    B028,
# Flake8 is less lenient than pylint and does not make any exceptions
# (for docstrings, strings and comments in particular).
max-line-length=125
# Required for flake8-typing-imports (v1.12.0)
# The plugin doesn't yet read the value from pyproject.toml
min_python_version = 3.7.2
