[tox:tox]
envlist = py{36,37,38,39,310}
skipsdist = True
skip_missing_interpreters = True

[testenv]
deps =
    numpy
setenv =
    SDL_VIDEODRIVER=dummy
    SDL_AUDIODRIVER=disk
passenv =
    PORTMIDI_INC_PORTTIME
commands =
    python -m buildconfig -auto
    pip install .
    python -m pygame.tests

[options.entry_points]
pyinstaller40 =
	hook-dirs = pygame.__pyinstaller:get_hook_dirs

[isort]
multi_line_output = 3
line_length = 88
known_first_party = pygame
known_third_party = numpy, distutils, setuptools, sphinx
include_trailing_comma = True
src_paths = src_py

[pylint.MESSAGES CONTROL]
extension-pkg-whitelist=pygame
enable=
    useless-supression,

disable=
    missing-docstring,
